Fixed text overflow in items (#294) --release

--- a/resources/styles/restaurant.scss
+++ b/resources/styles/restaurant.scss
@@ -315,6 +315,9 @@ a {
     align-items: flex-start;
     padding-left: 15px;
     padding-right: 15px;
+    word-wrap: break-word;
+    // word-break: break-all;
+    white-space: pre-line;
   }
 
   .cost {
